--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
         android:layout_marginLeft="10pt"
         android:layout_marginTop="20pt"
         android:layout_marginRight="10pt"
-        android:hint="name"
+        android:hint="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -36,7 +36,7 @@
         android:layout_marginLeft="10pt"
         android:layout_marginTop="15pt"
         android:layout_marginRight="10pt"
-        android:hint="email"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
         android:layout_marginLeft="10pt"
         android:layout_marginTop="15pt"
         android:layout_marginRight="10pt"
-        android:hint="Confirm Email"
+        android:hint="Confirm Password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
