--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -64,7 +64,7 @@
         android:layout_marginBottom="10pt"
         android:onClick="handleAddRecipe"
         android:padding="6pt"
-        android:text="Recipes"
+        android:text="Upload Recipes"
         android:textSize="8pt"
         app:layout_constraintBottom_toTopOf="@id/btnUpdate"
         app:layout_constraintEnd_toEndOf="parent"
